crates/secretenv-telemetry/tests/ui_sec_inv_12/record_mcp_argument_reason_absent.stderr
error[E0599]: no method named `record_mcp_argument_reason` found for struct `SecretEnvSpan` in the current scope
  --> tests/ui_sec_inv_12/record_mcp_argument_reason_absent.rs:23:10
   |
23 |     span.record_mcp_argument_reason("operator rationale string");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SecretEnvSpan`

error[E0599]: no method named `record_mcp_resolved_value` found for struct `SecretEnvSpan` in the current scope
  --> tests/ui_sec_inv_12/record_mcp_argument_reason_absent.rs:24:10
   |
24 |     span.record_mcp_resolved_value("sk_live_abc123...");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SecretEnvSpan`

error[E0599]: no method named `record_mcp_tool_output_raw` found for struct `SecretEnvSpan` in the current scope
  --> tests/ui_sec_inv_12/record_mcp_argument_reason_absent.rs:25:10
   |
25 |     span.record_mcp_tool_output_raw("{\"value\":\"sk_live_abc123\"}");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `SecretEnvSpan`
